<resources>
    <string name="app_name">Театр На Чайной</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="schedule">Афиша</string>
    <string name="repertoire">Репертуар</string>
    <string name="troupe">Труппа</string>
    <string name="сontacts">Контакты</string>
    <string name="about_the_theater">О театре</string>
    <string name="news">Новости</string>

    <string name="date">Дата спектакля</string>
    <string name="day">День спектакля</string>
    <string name="title">Название спектакля</string>
    <string name="timeLenght">Время спектакля</string>
    <string name="time">Время начала</string>
    <string name="cost">Стоимость</string>

    <string name="workOnPerf">Над спектаклем работали</string>
    <string name="actors">Актеры</string>
    <string name="theaterDirector">Руководитель театра</string>
    <string name="directorName">Александр Онищенко</string>
    <string name="actors_name">Actors Name</string>
    <string name="characters_name">Characters Name</string>
    <string name="partInPerf">Участие в спектаклях</string>
    <string name="details">Подробнее</string>
    <string name="geo">ООО \"Студия 10/1\" Украина, Одесса, ул. Маразлиевская 34-А.</string>
    <string name="phone_number">(048) 743-14-21</string>
    <string name="phone_number_2">(093) 487-84-16</string>
    <string name="web">http://tea-atr.com/</string>
    <string name="email">info@tea-atr.com</string>
    <string name="question_and_order">Справки и заказ билетов</string>
    <string name="Photos">Фотографии</string>
    <string name="perf_director">Режиссёр: </string>
    <string name="actor">Актер</string>
    <string name="director">Режиссёр</string>
    <string name="dontConnect">Отсутствует подключние к интернету</string>
    <string name="not_exist_photos">Фотографии отсутствуют</string>


</resources>
