<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/schedule"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/schedule" />
        <item
            android:id="@+id/repertoire"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/repertoire" />
        <item
            android:id="@+id/troupe"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/troupe" />
        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/news" />
    </group>

    <item android:title="@string/сontacts">
        <menu>
            <item
                android:id="@+id/сontacts"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/сontacts" />
            <item
                android:id="@+id/about_the_theater"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about_the_theater" />
        </menu>
    </item>

</menu>
